--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
   </head>
   <body class="bg-light">
     <div class="container-sm bg-black vh-100 vw-100 d-flex justify-content-center align-items-center">
-      <div class="card bg-white w-25 text-center p-4">
-        Criando uma conta
+      <div class="card bg-white w-25 text-center p-3">
         <div class="card-body">
-            <input placeholder="Nome completo" class="bg-light border-0 border-0 mb-2">
-            <input placeholder="Email" class="bg-light border-0 border-0">
-            <input placeholder="Telefone" class="bg-light border-0">
-            <input placeholder="CPF" class="bg-light border-0">
-            <input placeholder="Endereço" class="bg-light border-0">
-            <input placeholder="CEP" class="bg-light border-0">
+            <p class="h4 mb-2">Criando uma Conta</p>
+            <input placeholder="Nome completo" class="bg-light border-0 mb-2">
+            <input placeholder="Email" class="bg-light border-0 mb-2">
+            <input placeholder="Telefone" class="bg-light border-0 mb-2">
+            <input placeholder="CPF" class="bg-light border-0 mb-2">
+            <input placeholder="Endereço" class="bg-light border-0 mb-2">
+            <input placeholder="CEP" class="bg-light border-0 mb-2">
+            <div class="form-check mb-2">
+              <input class="form-check-input" type="checkbox" value="" id="checkDefault">
+              <label class="form-check-label" for="checkDefault">Aceitar Termos e Condições</label>
+            </div>
+            <button class="btn btn-dark bg-primary border-0 w-50">Registrar</button>
         </div>
       </div>
     </div>
