--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <title>Card de Dados</title>
   </head>
   <body class="bg-light">
-    <div class="container-sm bg-black vh-100 vw-100 d-flex justify-content-center align-items-center">
-      <div class="card bg-white w-25 text-center p-3">
+    <div class="container-sm vh-100 vw-100 d-flex justify-content-center align-items-center">
+      <div class="card bg-white w-25 text-center p-3 shadow-lg border-0">
         <div class="card-body">
-            <p class="h4 mb-2">Criando uma Conta</p>
-            <input placeholder="Nome completo" class="bg-light border-0 mb-2">
-            <input placeholder="Email" class="bg-light border-0 mb-2">
-            <input placeholder="Telefone" class="bg-light border-0 mb-2">
-            <input placeholder="CPF" class="bg-light border-0 mb-2">
-            <input placeholder="Endereço" class="bg-light border-0 mb-2">
-            <input placeholder="CEP" class="bg-light border-0 mb-2">
-            <div class="form-check mb-2">
+            <img src="./assets/img/senac.png" alt="" class="w-25 mb-3">
+            <p class="h4 mb-4 fw-bold">Criando uma Conta</p>
+            <input type="text" placeholder="Nome completo" class="bg-light border-0 w-100 mb-2 rounded ps-3">
+            <input type="text" placeholder="Email" class="bg-light border-0 w-100 mb-2 rounded ps-3">
+            <input type="text" placeholder="Telefone" class="bg-light border-0 w-100 mb-2 rounded ps-3 ">
+            <input type="text" placeholder="CPF" class="bg-light border-0 w-100 mb-2 rounded ps-3">
+            <input type="text" placeholder="Endereço" class="bg-light border-0 w-100 mb-2 rounded ps-3">
+            <input type="text" placeholder="CEP" class="bg-light border-0 w-100 mb-3 rounded ps-3">
+            <div class="form-check mb-3 text-start">
               <input class="form-check-input" type="checkbox" value="" id="checkDefault">
               <label class="form-check-label" for="checkDefault">Aceitar Termos e Condições</label>
             </div>
