--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
-<!DOCplaceholder html>
-<html lang="en">
+<!DOCTYPE html>
+  <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Card de Dados</title>
   </head>
+
   <body class="bg-light">
-    <div class="container-sm vh-100 vw-100 d-flex justify-content-center align-items-center">
-      <div class="card bg-white w-25 text-center p-3 shadow-lg border-0">
-        <div class="card-body">
-            <img src="./assets/img/senac.png" alt="" class="w-25 mb-3">
-            <p class="h4 mb-4 fw-bold">Criando uma Conta</p>
-            <input type="text" placeholder="Nome completo" class="bg-light border-0 w-100 mb-2 rounded ps-3">
-            <input type="text" placeholder="Email" class="bg-light border-0 w-100 mb-2 rounded ps-3">
-            <input type="text" placeholder="Telefone" class="bg-light border-0 w-100 mb-2 rounded ps-3 ">
-            <input type="text" placeholder="CPF" class="bg-light border-0 w-100 mb-2 rounded ps-3">
-            <input type="text" placeholder="Endereço" class="bg-light border-0 w-100 mb-2 rounded ps-3">
-            <input type="text" placeholder="CEP" class="bg-light border-0 w-100 mb-3 rounded ps-3">
-            <div class="form-check mb-3 text-start">
-              <input class="form-check-input" type="checkbox" value="" id="checkDefault">
-              <label class="form-check-label" for="checkDefault">Aceitar Termos e Condições</label>
-            </div>
-            <button class="btn btn-dark bg-primary border-0 w-50">Registrar</button>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+      <form class="bg-body text-center p-5 shadow-lg border-0">
+        <img src="./assets/img/senac.png" alt="" class="w-25 mb-3">
+        <p class="h4 mb-4 fw-bold">Criando uma Conta</p>
+        <div class="mb-3">
+          <input type="text" placeholder="Nome completo" class="form-control bg-light border-0 mb-2 rounded ps-3">
         </div>
-      </div>
+        <div class="mb-3">
+          <input type="text" placeholder="Email" class="form-control bg-light border-0 mb-2 rounded ps-3">
+        </div>
+        <div class="mb-3">
+          <input type="text" placeholder="Telefone" class="form-control bg-light border-0 mb-2 rounded ps-3 ">
+        </div>
+        <div class="mb-3">
+          <input type="text" placeholder="CPF" class="form-control bg-light border-0 mb-2 rounded ps-3">
+        </div>
+        <div class="mb-3">
+          <input type="text" placeholder="Endereço" class="form-control bg-light border-0 mb-2 rounded ps-3">
+        </div>
+        <div class="mb-3">
+          <input type="text" placeholder="CEP" class="form-control bg-light border-0 mb-3 rounded ps-3">
+        </div>
+        <div>
+          <div class="form-check d-flex justify-content-start">
+            <input class="form-check-input me-2" type="checkbox" value="" id="checkDefault">
+            <label class="form-check-label" for="checkDefault">Aceitar Termos e Condições</label> 
+          </div>
+        </div>
+        <div class="mt-3">
+          <button class="btn btn-dark bg-primary border-0">Registrar</button>
+        </div>
+      </form>
     </div>
     <script src="./assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
-</html>
+
+  </html>
